# tauri-plugin-php

./: Cargo.toml  README.md  TESTING.md  TEST_SUMMARY.md  tauri.conf.json
.github/workflows/: test.yml
benches/: performance_tests.rs
guest-js/: index.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
guest-js/coverage/: coverage-final.json  index.html  index.ts.html
guest-js/tests/: api.test.ts
permissions/: default.toml
scripts/: test.bat  test.sh
src/: commands.rs  error.rs  framework_detector.rs  lib.rs  models.rs  php_binary.rs  php_server.rs  project_manager.rs
tests/: basic_test.rs  framework_detector_tests.rs  integration_tests.rs  php_binary_tests.rs  php_server_tests.rs  project_manager_tests.rs
tests/common/: mod.rs
