[package]
name = "tauri-plugin-php"
version = "0.1.0"
description = "A Tauri plugin for managing PHP servers and projects"
authors = ["Tauri PHP Plugin Team"]
license = "Apache-2.0 OR MIT"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
dirs = "5.0"
log = "0.4"
thiserror = "1.0"
url = "2.5"
uuid = { version = "1.17.0", features = ["v4"] }
zip = "4.0.0"
reqwest = "0.12.18"
git2 = "0.20.2"



[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_tests"
harness = false
